# QQSpeedKeyboardHelper

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: gen_icon.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
